--- a/resources/sass/_formatting.scss
+++ b/resources/sass/_formatting.scss
@@ -112,7 +112,15 @@ nav .brand-logo #navtxt{
     color: #62A1EC;
     display: inline-block;
 }
-
+nav .brand-logo #navtxt-mobile{
+    color: #62A1EC;
+    font-size: 24px;
+    font-family: 'Exo', sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    float: right;
+    white-space: nowrap;
+}
 nav .brand-logo #img{
     width: 51px;
     height: 51px;
@@ -165,7 +173,7 @@ h1, h2, h3, h4, h5, h6{
 .landing-sub{
     height: 17px;
     position: relative;
-    font-family: Exo;
+    font-family: Exo, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -178,7 +186,7 @@ h1, h2, h3, h4, h5, h6{
     height: 275px;
 }
 .card-panel h1{
-    font-family: Exo;
+    font-family: Exo, sans-serif;
     text-transform: uppercase;
     font-style: normal;
     font-weight: 600;
@@ -186,7 +194,7 @@ h1, h2, h3, h4, h5, h6{
     color: #444444;
 }
 .card-panel p{
-    font-family: Exo;
+    font-family: Exo, sans-serif;
     font-style: normal;
     color: #444444;
     font-weight: normal;
